# django-storage-url

./: .coveragerc  .gitignore  CHANGELOG.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  setup.cfg  setup.py  tox.ini
django_storage_url/: __init__.py  base.py
django_storage_url/backends/: __init__.py  az.py  file.py  not_implemented.py  s3.py
tests/: requirements.txt  settings.py  test_deconstruct.py  test_migrations.py  test_s3.py  test_serialization.py
