[metadata]
name = django-storage-url
version = 0.12.0
author = Jonathan Stoppani
author_email = jonathan.stoppani@divio.com
license = MIT
description = URL-based Django storage configuration
url = https://github.com/divio/django-storage-url
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[options]
packages = find:
zip_safe = False
install_requires =
    django>=2.2
    django-storages
    furl
include_package_data = True
test_suite = tests.settings.run

[bdist_wheel]
universal=1
